--- a/css/style.css
+++ b/css/style.css
@@ -112,21 +112,41 @@ color: #4D5AE5;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.32px;
-    /* padding: 24px 0; */
+    position: relative;
+    padding-bottom: 20px;
+    cursor: pointer;
+    margin-bottom: -20px;
 }
-.navigation-item-link{
-    padding-top: 24px;
-    padding-bottom: 24px;
-}
+
 
 .navigation-item:hover,
 .navigation-item:focus {
     color: #404bbf;
 }
 
+.navigation-item::after {
+content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    background:#404BBF;
+    transform: scaleX(0);
+    transform-origin: bottom left;
+    transition: transform 0.3s ease-in-out;
+}
+
+.navigation-item:hover::after {
+    transform: scaleX(1);
+    width: 100%;
+}
+
 .navigation-item-link {
     color: #2E2f42;
-
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
@@ -178,15 +198,14 @@ color: #4D5AE5;
 
 /* Main content */
 
-.main-section {
+.hero {
     background-color: #2E2F42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url("/images/people-office.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
-    /* display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 188 472; */
 }
 
 .main-container {
@@ -194,7 +213,6 @@ color: #4D5AE5;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 188 472;
 }
 
 .main-title{
@@ -314,6 +332,23 @@ color: #4D5AE5;
     color: var(--second-title-color);
 }
 
+.team-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+
+.team-link-icon {
+    fill: #4D5AE5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
 /* Our Portfolio */
 .portfolio-section {
     padding-top: 120px;
@@ -437,4 +472,26 @@ color: #4D5AE5;
 .footer-text{
     color: #f4f4fd;
   max-width: 264px;
+}
+
+.footer-icon {
+    display: flex;
+    gap: 16px;
+    cursor: pointer;
+}
+
+.button-footer {
+    border: none;
+    padding: 0;
+    background-color: #2E2F42;
+}
+
+.button-icon-footer {
+    content: "";
+    margin-top: 16px;
+    border-radius: 50%;
+    background: #4D5AE5;
+    background-size: 24px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
