--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,11 @@ img {
 .header {
     background-color: #fff;
     padding-top: 24px;
-  padding-bottom: 24px;
+    padding-bottom: 24px;
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -125,16 +128,17 @@ color: #4D5AE5;
 }
 
 .navigation-item::after {
-content: '';
+    content: '';
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     width: 48px;
     height: 4px;
     border-radius: 2px;
-    background:#404BBF;
+    background-color:#404BBF;
     transform: scaleX(0);
     transform-origin: bottom left;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 0.3s ease-in-out;
 }
 
@@ -144,13 +148,14 @@ content: '';
 }
 
 .navigation-item-link {
-    color: #2E2f42;
+    color: #2E2F42;
     padding-top: 24px;
     padding-bottom: 24px;
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.32px;
+    position: relative;
 }
 
 .navigation-item-link:hover,
@@ -213,6 +218,7 @@ content: '';
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    max-width: 1440px;
 }
 
 .main-title{
@@ -307,11 +313,13 @@ content: '';
     background-color: #ffffff;
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
-    /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08); */
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-text{
-    padding: 32px 0;
+    padding: 32px 0 8px 0;
 }
 
 .our-team-name{
@@ -335,19 +343,33 @@ content: '';
 .team-icons {
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 24px;
+    padding-bottom: 32px;
 }
 
+.team-item-icon {
+    width: 40px;
+    height: 40px;
+}
 
-.team-link-icon {
-    fill: #4D5AE5;
+.team-item-link {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 100%;
     height: 100%;
+    background-color: #4d5ae5;
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+
+.team-item-link:hover,
+.team-item-link:focus {
+    background-color: #404bbf;
+}
+
+.team-link-icon {
+    fill: #f4f4fd;
 }
 /* Our Portfolio */
 .portfolio-section {
@@ -375,11 +397,28 @@ content: '';
     padding-bottom: 32px;
     align-items: flex-start;
     flex-shrink: 0;
-  gap: 48px 24px;
+    gap: 48px 24px;
 }
 
 .portfolio-item {
     flex-basis: calc((100% - 64px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
+}
+
+.portfolio-item-text-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item-text-container:hover {
+    transform: translateY(0%);
 }
 
 .portfolio-item-container {
@@ -395,10 +434,27 @@ content: '';
     flex-shrink: 0;
 }
 
+.portfolio-item-text {
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 40px 32px;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item-text:hover {
+    transform: translateY(0%);
+}
+
 .portfolio-name {
     color: #2E2F42;
-    /* padding-left: 16px; */
-    /* margin-top: 32px; */
     margin-bottom: 7px;
     font-size: 20px;
     font-style: normal;
