--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,7 @@ color: #4D5AE5;
 .social-item {
     width: 40px;
     height: 40px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item-link {
