--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ color: #4D5AE5;
     background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
+    max-width: 1440px;
 }
 
 .main-container {
@@ -218,7 +219,6 @@ color: #4D5AE5;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    max-width: 1440px;
 }
 
 .main-title{
@@ -240,6 +240,7 @@ color: #4D5AE5;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
@@ -332,6 +333,7 @@ color: #4D5AE5;
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--second-title-color);
+    margin-bottom: 8px;
 }
 
 .team-icons {
