--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,17 @@ color: #4D5AE5;
     width: calc((100% - 72px) / 4);
 }
 
+.features-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border: 1px solid #8E8F99;
+    border-radius: 4px;
+    margin-bottom: 8px;
+}
+
 .features-name{
     margin-bottom: 8px;
     font-size: 20px;
@@ -550,7 +561,6 @@ color: #4D5AE5;
 .social-item {
     width: 40px;
     height: 40px;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item-link {
@@ -561,6 +571,7 @@ color: #4D5AE5;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item-link:hover,
