--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ img {
 }
 
 .logo {
-color: #4D5AE5;
+color: #404bbf;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -135,7 +135,7 @@ color: #4D5AE5;
     width: 48px;
     height: 4px;
     border-radius: 2px;
-    background-color:#404BBF;
+    background-color:#404bbf;
     transform: scaleX(0);
     transform-origin: bottom left;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -194,6 +194,7 @@ color: #4D5AE5;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px;
+    color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-item-link:hover,
@@ -205,7 +206,7 @@ color: #4D5AE5;
 
 .hero {
     background-color: #2E2F42;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url("/images/people-office.jpg");
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -571,7 +572,7 @@ color: #4D5AE5;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-item-link:hover,
