--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ img {
 }
 
 .navigation-item-link {
-    color: #2E2F42;
+    color: #404bbf;
     padding-top: 24px;
     padding-bottom: 24px;
     font-size: 16px;
@@ -156,6 +156,7 @@ img {
     line-height: 24px;
     letter-spacing: 0.32px;
     position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .navigation-item-link:hover,
@@ -194,7 +195,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .address-item-link:hover,
