--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ img {
 }
 
 .navigation-item-link {
-    color: #404bbf;
+    color: #2E2F42;
     padding-top: 24px;
     padding-bottom: 24px;
     font-size: 16px;
