--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ img {
     /* padding: 24px 0; */
 }
 
-.navigation-item {
+/* .navigation-item {
     color: #404bbf;
 
     font-family: Roboto;
@@ -119,13 +119,13 @@ img {
     padding-bottom: 20px;
     cursor: pointer;
     margin-bottom: -20px;
-}
+} */
 
 
-.navigation-item:hover,
+/* .navigation-item:hover,
 .navigation-item:focus {
     color: #404bbf;
-}
+} */
 
 .navigation-item-link::after {
     content: '';
@@ -157,6 +157,10 @@ img {
     letter-spacing: 0.32px;
     position: relative;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-item-link-first {
+    color: #404bbf;
 }
 
 .navigation-item-link:hover,
@@ -213,6 +217,7 @@ img {
     background-size: cover;
     padding-top: 188px;
     padding-bottom: 188px;
+    margin: 0 auto;
     max-width: 1440px;
 }
 
